finished trending page and fixed scrollbar bug when toggling dark theme

--- a/CSS/movies.css
+++ b/CSS/movies.css
@@ -32,6 +32,9 @@ main {
 }
 
 /* SCROLLBAR */
+html {
+  scroll-behavior: smooth;
+}
 ::-webkit-scrollbar {
   width: 0.6rem;
 }
@@ -55,7 +58,7 @@ main {
 }
 
 .nav-bar:hover ~ main {
-  margin-left: 14rem; 
+  margin-left: 14rem;
 }
 
 .nav-bar {
@@ -121,16 +124,16 @@ main {
   margin-left: 1rem;
 }
 
-.nav-link .navbar-icon  {
+.navbar-icon {
   width: 2rem;
   min-width: 2rem;
   margin: 0 1.5rem;
-}
-
-/* ---------------THEME--------------- */
-.navbar-icon {
   color: rgb(210, 210, 210);
 }
+
+/* style="visibility: visible; opacity: 1; text-shadow: rgba(0, 0, 0, 0.5) 0px 0px 30px; letter-spacing: -17px; user-select: none;" */
+
+/* ---------------THEME--------------- */
 
 .button {
   background-color: var(--text-primary);
@@ -139,7 +142,7 @@ main {
   align-items: center;
   cursor: pointer;
   position: relative;
-  min-width: 4rem ;
+  min-width: 4rem;
   margin: 1rem;
   height: 5vh;
   box-shadow: inset 0 8px 60px rgba(0, 0, 0, 0.1),
@@ -220,7 +223,6 @@ main {
   display: flex;
 }
 
-
 .entry-card-icon {
   font-size: 1.6rem;
   font-family: "Open Sans";
@@ -249,7 +251,7 @@ main {
   left: 0;
   right: 0;
   bottom: 0;
-  width: 16rem; 
+  width: 16rem;
   height: 16rem;
 }
 
@@ -267,16 +269,31 @@ main {
   flex: 1;
   display: flex;
   flex-direction: column;
-  width: 16rem; 
+  width: 16rem;
   height: 16rem;
-  box-shadow: 1px 3px 2px rgba(0,0,0,.25);
+  box-shadow: 1px 3px 2px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
 }
 
 .entry-card-container {
   display: flex;
   flex-direction: column;
-  
 }
 
+.image-number-container {
+  content: "";
+  position: relative;
+  object-fit: contain;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 16rem;
+  height: 16rem;
+}
 
+.image-number-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
